--- a/src/scss/animate/_about.scss
+++ b/src/scss/animate/_about.scss
@@ -18,68 +18,274 @@
     }
 }
 
-@keyframes about-sec3-graphics-center-1-animate {
-    form{
-        transform: translate(-50%,0) rotate(0deg);
-    }
-    to{
-        transform: translate(-50%,0) rotate(360deg);
+.about-sec3-graphics {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 5rem;
+    &#{-center}{        
+        width: 35rem;
+        height: 35rem;
+        position: relative;
+
+        &#{-heading}{
+            max-width: 19rem;
+            position: absolute;
+            transform: translate(0,0);
+
+            @include media-max($xl) {
+                max-width: 13rem;
+            }
+            @include media-max($lg) {
+                display: none;
+            }
+            h4{
+                font-size: 1.125rem;
+            }
+            p{
+                color: #010101;
+                font-size: 0.9375rem;
+            }
+            &:nth-of-type(1){
+                right: -11rem;
+                top: 0;
+                @include media-max($xl) {
+                    right: -7rem;
+                }
+                &.animate{
+                    animation: about-sec2-heading-1 3s;
+                }
+            }
+            &:nth-of-type(2){
+                text-align: right;
+                left: -19rem;
+                top: 40%;
+                @include media-max($xl) {
+                    left: -13rem;
+                }
+                &.animate{
+                    animation: about-sec2-heading-2 3s;
+                }
+            }
+            &:nth-of-type(3){
+                right: -19rem;
+                bottom: 10rem;
+                @include media-max($xl) {
+                    right: -13rem;
+                }
+                &.animate{
+                    animation: about-sec2-heading-3 3s;
+                }
+            }
+        }
+        &#{-position}{   
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 14.25rem;
+            height: 14.25rem;
+
+            &#{-circle}{   
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                border-radius: 50%;
+                flex-shrink: 0;
+                width: 100%;
+                height: 100%;
+                text-align: center;
+                span{
+                    border-radius: 50%;
+                    flex-shrink: 0;
+                    font-size: 1.5rem;
+                    line-height: 1.2;
+                }
+            }
+        }
     }
 }
-@keyframes about-sec3-graphics-center-2-animate {
-    form{
-        transform: translate(-50%,0) rotate(0deg);
-    }
-    to{
-        transform: translate(-50%,0) rotate(360deg);
-    }
-}
-@keyframes about-sec3-graphics-center-3-animate {
-    form{
-        transform: translate(-50%,0) rotate(240deg);
-    }
-    to{
-        transform: translate(-50%,0) rotate(600deg);
-    }
-}
-@keyframes about-sec3-graphics-center-4-animate {
-    form{
-        transform: translate(-50%,0) rotate(120deg);
-    }
-    to{
-        transform: translate(-50%,0) rotate(480deg);
+
+#core-values{
+    z-index: 5;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transform: translate(-50%,-50%) scale(1);
+    .about-sec3-graphics-center-position-circle{
+        width: 11.25rem;
+        height: 11.25rem;
+        background-color: #71c5e9;
+        span{
+            font-size: 2.25rem;
+            
+        }
     }
 }
-@keyframes about-sec3-graphics-heading-4-animate {
-    0%{
-        transform: translate(445%, 140%);
+#innovation{
+    z-index: 4;
+    transform: translate(-50%,-50%) rotate(0deg);
+    .about-sec3-graphics-center-position-circle{
+        background-color: #305683;
+        transform: translate(0,-75%);
+        span{
+            transform: rotate(0deg);
+        }
     }
-    50%{
-        transform: translate(445%, 140%);
-    }
-    100%{
-        transform: translate(145%, 140%);
+
+}
+#reliability{
+    z-index: 3;
+    transform: translate(-50%,-50%) rotate(240deg);
+    .about-sec3-graphics-center-position-circle{
+        background-color: #5e6d84;
+        transform: translate(0,-75%);
+        span{
+            transform: rotate(-240deg);
+        }
     }
 }
-@keyframes about-sec3-graphics-heading-3-animate {
-    0%{
-        transform: translate(-440%, 50%);
-    }
-    50%{
-        transform: translate(-440%, 50%);
-    }
-    100%{
-        transform: translate(-140%, 50%);
+#customer-focus{
+    z-index: 2;
+    transform: translate(-50%,-50%) rotate(120deg);
+    .about-sec3-graphics-center-position-circle{
+        background-color: #92a9c9;
+        transform: translate(0,-75%);
+        span{
+            transform: rotate(-120deg);
+        }
     }
 }
-@keyframes about-sec3-graphics-heading-2-animate {
-    0%{
-        transform: translate(400%,-65%);
+#circle-line{
+    z-index: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 20.25rem;
+    height: 20.25rem;
+    transform: translate(-50%,-50%);
+    .about-sec3-graphics-center-position-circle{
+        border: 0.375rem solid #6da8f2;
     }
-    50%{
-        transform: translate(400%,-65%);
+}
+
+    #core-values.animate{
+        animation: core-position 1s ease-out;
     }
-    100%{
-        transform: translate(100%,-65%);
+    #innovation.animate{
+        animation: innovation-position 2s;
+        .about-sec3-graphics-center-position-circle{
+            animation: innovation-position-circle 2s;
+            span{
+                animation: innovation-position-circle-span 2s;
+            }
+        }
     }
+    #reliability.animate{
+        animation: reliability-position 2s;
+        .about-sec3-graphics-center-position-circle{
+            animation: reliability-position-circle 2s;
+            span{
+                animation: reliability-position-circle-span 2s;
+            }
+        }
+    }
+    #customer-focus.animate{
+        animation: customer-position 2s;
+        .about-sec3-graphics-center-position-circle{
+            animation: customer-position-circle 2s;
+            span{
+                animation: customer-position-circle-span 2s;
+            }
+        }
+    }
+    #circle-line.animate{
+        animation: line-position 2.4s linear;
+    }
+
+
+@keyframes core-position{
+    0%{transform: translate(-50%,-50%) scale(0);}
+    50%{transform: translate(-50%,-50%) scale(0);}
+    100%{transform: translate(-50%,-50%) scale(1);}
+}
+@keyframes innovation-position{
+    0%{transform: translate(-50%,-50%) rotate(0deg);}
+    50%{transform: translate(-50%,-50%) rotate(0deg);}
+    80%{transform: translate(-50%,-50%) rotate(360deg);}
+    100%{transform: translate(-50%,-50%) rotate(360deg);}
+}
+@keyframes reliability-position{
+    0%{transform: translate(-50%,-50%) rotate(240deg);}
+    60%{transform: translate(-50%,-50%) rotate(240deg);}
+    90%{transform: translate(-50%,-50%) rotate(600deg);}
+    100%{transform: translate(-50%,-50%) rotate(600deg);}
+}
+@keyframes customer-position{
+    0%{transform: translate(-50%,-50%) rotate(120deg);}
+    70%{transform: translate(-50%,-50%) rotate(120deg);}
+    100%{transform: translate(-50%,-50%) rotate(480deg);}
+}
+@keyframes line-position{
+    0% {clip-path: polygon(50% 0, 50% 0, 50% 50%, 50% 0, 50% 0, 50% 0, 50% 0);}
+    84% {clip-path: polygon(50% 0, 50% 0, 50% 50%, 50% 0, 50% 0, 50% 0, 50% 0);}
+    86% {clip-path: polygon(100% 0, 100% 0, 50% 50%, 50% 0, 100% 0, 100% 0, 100% 0);}
+    88% {clip-path: polygon(100% 50%, 100% 50%, 50% 50%, 50% 0, 100% 0, 100% 50%, 100% 50%);}
+    90% {clip-path: polygon(100% 100%, 100% 100%, 50% 50%, 50% 0, 100% 0, 100% 100%, 100% 100%);}
+    92% {clip-path: polygon(50% 100%, 50% 100%, 50% 50%, 50% 0, 100% 0, 100% 100%, 50% 100%);}
+    94% {clip-path: polygon(0 100%, 0 100%, 50% 50%, 50% 0, 100% 0, 100% 100%, 0 100%);}
+    96% {clip-path: polygon(0 50%, 0 50%, 50% 50%, 50% 0, 100% 0, 100% 100%, 0 100%);}
+    98% {clip-path: polygon(0 0, 0 0, 50% 50%, 50% 0, 100% 0, 100% 100%, 0 100%);}
+    100% {clip-path: polygon(0 0, 50% 0, 50% 50%, 50% 0, 100% 0, 100% 100%, 0 100%);}
+}
+
+@keyframes innovation-position-circle{
+    0%{transform: translate(0,-75%) scale(0);}
+    50%{transform: translate(0,-75%) scale(0);}
+    80%{transform: translate(0,-75%) scale(1);}
+    100%{transform: translate(0,-75%) scale(1);}
+}
+@keyframes reliability-position-circle{
+    0%{transform: translate(0,-75%) scale(0);}
+    60%{transform: translate(0,-75%) scale(0);}
+    90%{transform: translate(0,-75%) scale(1);}
+    100%{transform: translate(0,-75%) scale(1);}
+}
+@keyframes customer-position-circle{
+    0%{transform: translate(0,-75%) scale(0);}
+    70%{transform: translate(0,-75%) scale(0);}
+    100%{transform: translate(0,-75%) scale(1);}
+}
+
+@keyframes innovation-position-circle-span{
+    0%{transform: rotate(0deg);}
+    50%{transform: rotate(0deg);}
+    80%{transform: rotate(-360deg);}
+    100%{transform: rotate(-360deg);}
+}
+@keyframes reliability-position-circle-span{
+    0%{transform: rotate(-240deg);}
+    60%{transform: rotate(-240deg);}
+    90%{transform: rotate(-600deg);}
+    100%{transform: rotate(-600deg);}
+}
+@keyframes customer-position-circle-span{
+    0%{transform: rotate(-120deg);}
+    70%{transform: rotate(-120deg);}
+    100%{transform: rotate(-480deg);}
+}
+
+@keyframes about-sec2-heading-1 {
+    0%{transform: translate(250%,0);}
+    80%{transform: translate(250%,0);}
+    100%{transform: translate(0,0);}
+}
+@keyframes about-sec2-heading-2 {
+    0%{transform: translate(-250%,0);}
+    80%{transform: translate(-250%,0);}
+    100%{transform: translate(0,0);}
+}
+@keyframes about-sec2-heading-3 {
+    0%{transform: translate(250%,0);}
+    80%{transform: translate(250%,0);}
+    100%{transform: translate(0,0);}
 }
